# Fathom

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  roadmap.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: api_contract.yml  bug_report.yml  model_runtime_request.yml  security_or_privacy.yml
.github/workflows/: ci.yml
crates/fathom-core/: Cargo.toml
crates/fathom-core/src/: lib.rs
crates/fathom-server/: Cargo.toml
crates/fathom-server/src/: main.rs
docs/: public-launch-checklist.md  public-launch-evidence.md
docs/api/: backend-only-quickstart.md  client-examples.md  minilm-embeddings-optional-acceptance.md  public-contract.json  qwen25-optional-acceptance.md  refusal-boundary-matrix.md  smollm2-optional-acceptance.md  v1-contract.md
docs/architecture/: rust-runtime-architecture.md
docs/benchmarks/: 2026-04-26-local-apple-silicon-candle-cache-refresh.md  2026-04-26-local-apple-silicon-candle-cache-six-family.md  2026-04-26-local-apple-silicon-gpt2-llama-cache.md  2026-04-28-llama3-tokenizer-parity.md  2026-04-29-minilm-embeddings-api-acceptance.md  2026-04-29-qwen25-api-acceptance.md  2026-04-29-qwen25-local-runtime-smoke.md  2026-04-29-smollm2-api-acceptance.md
docs/research/: competitive-positioning.md  model-format-landscape.md  performance-strategy.md  runtime-safety-policy.md  safetensors-first-backend-plan.md
examples/api/: curl-quickstart.sh  fathom.http  openai-sdk.py  python-no-deps.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: api_client_examples_regression.py  backend_acceptance_artifact_qa.py  backend_acceptance_smoke.sh  bench_backend.py  ci_static_policy.py  minilm_embeddings_optional_api_acceptance_artifact_qa.py  minilm_embeddings_optional_api_acceptance_smoke.sh  public_api_contract_qa.py  public_api_contract_smoke.sh  public_contract_smoke_artifact_qa.py  public_risk_scan.sh  qwen25_optional_api_acceptance_artifact_qa.py  qwen25_optional_api_acceptance_smoke.sh  reference_llama3_tokenizer_ids.py  smoke.sh  smollm2_optional_api_acceptance_artifact_qa.py  smollm2_optional_api_acceptance_smoke.sh  start-backend.sh  start.sh  stop.sh
(+19 files in other folders)
